--- a/index.html
+++ b/index.html
@@ -85,13 +85,14 @@
         <!-- First Image -->
         <div class="BiTRX">
             <picture>
-                <source media="(max-width: 480px)" srcset="..\images\imgsliderImages\titleImg1.jpeg">
-                <source media="(min-width: 481px) and (max-width: 768px)" srcset="..\images\imgsliderImages\titleImg1.jpeg">
-                <img class="n9wygc" alt="Header image for the site" src="..\images\imgsliderImages\titleImg1.jpeg"
+                <source media="(max-width: 480px)" srcset="./newPhotos/horizontalImages/p1.jpg">
+                <source media="(min-width: 481px) and (max-width: 768px)" srcset="./newPhotos/horizontalImages/p1.jpg">
+                <img class="n9wygc" alt="Header image for the site" src="./newPhotos/horizontalImages/p1.jpg"
                     data-atf="false" data-iml="759.7999999523163">
             </picture>
         </div>
     </div>
+
 
 
     <!-- imge slier code starts here -->
