Title img change

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <!-- First Image -->
         <div class="BiTRX">
             <picture>
-                <source media="(max-width: 480px)" srcset="./newPhotos/horizontalImages/p1.jpg">
-                <source media="(min-width: 481px) and (max-width: 768px)" srcset="./newPhotos/horizontalImages/p1.jpg">
-                <img class="n9wygc" alt="Header image for the site" src="./newPhotos/horizontalImages/p1.jpg"
+                <source media="(max-width: 480px)" srcset="./newPhotos/horizontalImages/titleImg1.jpeg">
+                <source media="(min-width: 481px) and (max-width: 768px)" srcset="./newPhotos/horizontalImages/titleImg1.jpeg">
+                <img class="n9wygc" alt="Header image for the site" src="./newPhotos/horizontalImages/titleImg1.jpeg"
                     data-atf="false" data-iml="759.7999999523163">
             </picture>
         </div>
