--- a/index.html
+++ b/index.html
@@ -1067,31 +1067,15 @@
                                 @mouseup="mouseUp1($event)" @touchstart="mouseDown1($event, 'touched')"
                                 @touchmove="mouseMove1($event, 'touched')" @touchend="mouseUp1($event)">
 
-                                <img src="/newPhotos/verticleImages/p1.jpg" alt="Image" />
-                                <img src="../images/horizontalImages/img5.jpg" alt="Image" />
-                                <img src="/newPhotos/verticleImages/p2.jpg" alt="Image" />
-                                <img src="/newPhotos/verticleImages/p3.jpeg" alt="Image" />
-                                <img src="/newPhotos/verticleImages/p4.jpg" alt="Image" />
-                                <img src="/newPhotos/verticleImages/p5.jpg" alt="Image" />
-                                <img src="/newPhotos/verticleImages/p6.jpg" alt="Image" />
-                                <img src="/newPhotos/verticleImages/p7.jpg" alt="Image" />
-                                <!-- <img src="https://i.ibb.co/42Y40GW/1.jpg" alt="Image" />
-                                <img src="https://i.ibb.co/y04Y7Jt/2.jpg" alt="Image" />
-                                <img src="https://i.ibb.co/wSrSTDb/Arby-Lipman-Elephant-Dustbath-MP-40-X60.jpg"
-                                    alt="Image" />
-                                <img src="https://i.ibb.co/VjJfPBL/Event91921416-Img.jpg" alt="Image" />
-                                <img src="https://i.ibb.co/sq8tbsx/Jim-Corbett.jpg" alt="Image" />
-                                <img src="https://i.ibb.co/sq8tbsx/Jim-Corbett.jpg" alt="Image" />
-                                <img src="https://i.ibb.co/sq8tbsx/Jim-Corbett.jpg" alt="Image" />
-                                <img src="https://i.ibb.co/VjJfPBL/Event91921416-Img.jpg" alt="Image" />
-                                <img src="https://i.ibb.co/sq8tbsx/Jim-Corbett.jpg" alt="Image" />
-                                <img src="https://i.ibb.co/sq8tbsx/Jim-Corbett.jpg" alt="Image" />
-                                <img src="https://i.ibb.co/sq8tbsx/Jim-Corbett.jpg" alt="Image" />
-                                <img src="https://i.ibb.co/VjJfPBL/Event91921416-Img.jpg" alt="Image" />
-                                <img src="https://i.ibb.co/sq8tbsx/Jim-Corbett.jpg" alt="Image" />
-                                <img src="https://i.ibb.co/sq8tbsx/Jim-Corbett.jpg" alt="Image" />
-                                <img src="https://i.ibb.co/sq8tbsx/Jim-Corbett.jpg" alt="Image" /> -->
-
+                                <img src="./newPhotos/verticleImages/p1.jpg" alt="Image" />
+                                <!-- <img src="../images/horizontalImages/img5.jpg" alt="Image" /> -->
+                                <img src="./newPhotos/verticleImages/p2.jpg" alt="Image" />
+                                <img src="./newPhotos/verticleImages/p3.jpeg" alt="Image" />
+                                <img src="./newPhotos/verticleImages/p4.jpg" alt="Image" />
+                                <img src="./newPhotos/verticleImages/p5.jpg" alt="Image" />
+                                <img src="./newPhotos/verticleImages/p6.jpg" alt="Image" />
+                                <img src="./newPhotos/verticleImages/p7.jpg" alt="Image" />
+                                <img src="./newPhotos/verticleImages/p1.jpg" alt="Image" />
                             </div>
                             <img v-if="autoPlayed1" @click="pause1()" class="pause1" img
                                 src="https://i.ibb.co/ggMqJsr/pause.png" alt="pause" title="pause">
