--- a/index.html
+++ b/index.html
@@ -96,10 +96,11 @@
     </div>
 
     <!-- -----------------------------------------------  Updates -------------------------------------------------------- -->
-    <section style="background-color: rgb(250, 135, 206);height: 549px">
+    <section style="background-color: darkgray;height: 549px">
     <section class="El9K7d updates" id="posts" jslog="64600; track:impression" data-panel="local-post-panel">
         <hr class="allhr" id="updates">
-        <h2 class="allh2">Updates</h2>
+        <h2 class="allh2" style ="box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px, rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px, rgb(255, 156, 85) 0px 0px 0px 12px, rgb(255, 85, 85) 0px 0px 0px 15px;" >Updates</h2>
+        
 
         <!-- Updates img-slider code -->
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
@@ -161,7 +162,7 @@
     <section style="background-color: lightyellow;">
     <div class="alldiv" id="testimonials" data-panel="testimonials-panel" jslog="64389; track:impression;">
         <hr class="allhr">
-        <h2 class="allh2" id="Testimonials">Testimonials</h2>
+        <h2 class="allh2" id="Testimonials" style="box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;">Testimonials</h2>
         <div class="testodiv">
             <div class="testodiv1">
                 <div class="testodiv2">
@@ -532,11 +533,11 @@
         <div class="alldiv" id="Gallery" jslog="64602; track:impression" data-panel="gallery-panel">
             <div class="gallerydiv1">
                 <hr class="allhr">
-                <h2 class="allh2">Gallery</h2>
+                <h2 class="allh2" style="box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;">Gallery</h2>
             </div>
 
             <!-- Image slider Gallery code starts here -->
-            <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
+            <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script> -->
 
             <div id="app1">
                 <template>
@@ -620,7 +621,7 @@
 
         <div id="details" data-panel="business-details-panel" class="IJMoHc alldiv" jslog="59796; track:impression">
             <hr class="allhr">
-            <h2 class="allh2" id="locateUs">Locate Us</h2>
+            <h2 class="allh2" id="locateUs" style="box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;">Locate Us</h2>
             <div class="locatediv1" jslog="56034; track:impression,click">
                 <a href="https://www.google.com/maps/place/ROYAL+ENTRYS+%26+STALLS/@16.2973763,80.4351399,15z/data=!4m17!1m10!3m9!1s0x3a4a75fcccd43ab7:0xa195a985a9ece3b8!2sROYAL+ENTRYS+%26+STALLS!8m2!3d16.2973763!4d80.4438946!10e5!14m1!1BCgIgAQ!16s%2Fg%2F11k3h35qnq!3m5!1s0x3a4a75fcccd43ab7:0xa195a985a9ece3b8!8m2!3d16.2973763!4d80.4438946!16s%2Fg%2F11k3h35qnq?entry=ttu"
                     target="_blank" itemprop="hasMap" data-tracking-element-type="7">
@@ -632,7 +633,7 @@
             </div>
         </section>
             <div class="fGZQDc">
-                <div class="kCmrbf">
+                <div class="kCmrbf" style="background-color: rgb(240, 234, 234);">
                     <h3 class="Gou21b">Contact</h3>
                     <div data-field="phone">
                         <a class="PDvGL q8cvFf" href="tel:+91-73309-51210" data-tracking-element-type="3"
@@ -643,7 +644,7 @@
                     </div>
                 </div>
 
-                <div class="kCmrbf">
+                <div class="kCmrbf" style="background-color: rgba(44, 121, 172, 0.063);">
                     <h3 class="Gou21b">Address</h3>
                     <div data-field="address">
                         <a class="PDvGL q8cvFf"
@@ -658,7 +659,7 @@
                         </address>
                     </div>
                 </div>
-                <div class="kCmrbf">
+                <div class="kCmrbf" style="background-color: skyblue;">
                     <h3 class="Gou21b">Business Hours</h3>
                     <div>
                         <table itemprop="openingHours">
@@ -709,7 +710,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="kCmrbf">
+                <div class="kCmrbf" style="background-color: aqua;">
                     <h3 class="Gou21b" id="services">Our Services</h3>
                     <div>
                         <ol>
